<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_marginVertical="32dp"
        android:layout_height="128dp"
        android:id="@+id/signupIcon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login"
        android:contentDescription="@string/add_user_icon" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Welcomelay"
        android:layout_below="@id/signupIcon"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to Cloud Notes"
            android:id="@+id/letsGetStartedtxt"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Welcomelay"
        android:id="@+id/form_lay"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/email_edit_text"
            android:background="@drawable/rounded_corners"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:autofillHints="" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/password_edit_text"
            android:background="@drawable/rounded_corners"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:importantForAutofill="no" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/login_btn"
            android:text="@string/login"
            android:layout_marginTop="12dp"
            android:textSize="16sp"/>
        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_lay"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:clickable="true"
            android:id="@+id/register_text_view_btn"
            android:text="@string/register"
            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>